Dark mode pro dropdown intl-tel-input a mensi fix na mezeru (#276)
* feat: added dark mode support for intl-tel-input dropdown and fixed space between country code and telephone value

* feat: converted jquery code to vanilla js

--- a/app/assets/stylesheets/folio/input/_phone.sass
+++ b/app/assets/stylesheets/folio/input/_phone.sass
@@ -4,6 +4,9 @@
   display: block
   font-size: $input-font-size
 
+.iti__country-list
+  background-color: $input-bg
+
 .iti__flag
   background-image: image-url("intl-tel-input-flags.png")
 
